// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<IconContainer/> should match snapshot when we add an icon description 1`] = `
<div
  className="sc-bdVaJa mTdHm sc-htpNat dFmIqQ"
  color="#fff"
>
  <span
    className="sc-bwzfXH ialnYM"
  >
    checked icon circle
  </span>
  Foobar
  <div
    className="sc-bxivhb htzmJv"
    marginHeight={12.5}
    marginWidth={12.5}
  >
    <svg
      aria-hidden={true}
      height={25}
      viewBox="0 0 20 20"
      width={25}
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="10"
        cy="10"
        fill="var(--color-background1)"
        r="10"
      />
      <path
        d="M8.232 13.89l.707.706 5.656-5.657-1.414-1.415-4.243 4.243-2.122-2.122-1.414 1.415 2.828 2.83z"
        fill="var(--color-font1)"
      />
    </svg>
  </div>
</div>
`;

exports[`<IconContainer/> should match snapshot when we change color 1`] = `
<div
  className="sc-bdVaJa mTdHm sc-htpNat dFmIqQ"
  color="#fff"
>
  Foobar
  <div
    className="sc-bxivhb htzmJv"
    marginHeight={12.5}
    marginWidth={12.5}
  >
    <svg
      aria-hidden={true}
      height={25}
      viewBox="0 0 20 20"
      width={25}
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="10"
        cy="10"
        fill="var(--color-background1)"
        r="10"
      />
      <path
        d="M8.232 13.89l.707.706 5.656-5.657-1.414-1.415-4.243 4.243-2.122-2.122-1.414 1.415 2.828 2.83z"
        fill="var(--color-font1)"
      />
    </svg>
  </div>
</div>
`;

exports[`<IconContainer/> should match snapshot when we change position 1`] = `
<div
  className="sc-bdVaJa mTdHm sc-htpNat jJDosi"
  color="#fff"
>
  Foobar
  <div
    className="sc-bxivhb gOKKPD"
    marginHeight={12.5}
    marginWidth={12.5}
  >
    <svg
      aria-hidden={true}
      height={25}
      viewBox="0 0 20 20"
      width={25}
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="10"
        cy="10"
        fill="var(--color-background1)"
        r="10"
      />
      <path
        d="M8.232 13.89l.707.706 5.656-5.657-1.414-1.415-4.243 4.243-2.122-2.122-1.414 1.415 2.828 2.83z"
        fill="var(--color-font1)"
      />
    </svg>
  </div>
</div>
`;

exports[`<IconContainer/> should match snapshot when we change width and height 1`] = `
<div
  className="sc-bdVaJa mTdHm sc-htpNat jMrsct"
  color="#fff"
>
  Foobar
  <div
    className="sc-bxivhb djKdMX"
    marginHeight={25}
    marginWidth={15}
  >
    <svg
      aria-hidden={true}
      height={50}
      viewBox="0 0 20 20"
      width={30}
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="10"
        cy="10"
        fill="var(--color-background1)"
        r="10"
      />
      <path
        d="M8.232 13.89l.707.706 5.656-5.657-1.414-1.415-4.243 4.243-2.122-2.122-1.414 1.415 2.828 2.83z"
        fill="var(--color-font1)"
      />
    </svg>
  </div>
</div>
`;

exports[`<IconContainer/> should match snapshot with default behavior 1`] = `
<div
  className="sc-bdVaJa mTdHm sc-htpNat dFmIqQ"
  color="#fff"
>
  Foobar
  <div
    className="sc-bxivhb htzmJv"
    marginHeight={12.5}
    marginWidth={12.5}
  >
    <svg
      aria-hidden={true}
      height={25}
      viewBox="0 0 20 20"
      width={25}
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="10"
        cy="10"
        fill="var(--color-background1)"
        r="10"
      />
      <path
        d="M8.232 13.89l.707.706 5.656-5.657-1.414-1.415-4.243 4.243-2.122-2.122-1.414 1.415 2.828 2.83z"
        fill="var(--color-font1)"
      />
    </svg>
  </div>
</div>
`;
